fixed the whitespace beneath footer

--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,22 @@
     font-size: 1em;
 }
 
+html{
+  height: 100%;
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 body {
+    position: relative;
     margin: 0;
+    padding-bottom:6rem;
+    min-height: 100%;
 }
 
 h1 {
@@ -100,12 +114,18 @@ nav li a:hover:not(.active) {
 }
 
 footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
     background-color: #002D72;
     color: #ffffff;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    padding-bottom=0 !important;
     padding: 10px 0;
 }
 footer img {
